# python-saharaclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/ext/: cli.py  ext.py  parser.py
doc/source/: api.rst  cli.rst  conf.py  how_to_participate.rst  index.rst  shell.rst
doc/source/cli/: index.rst  intro.rst  reference.rst
doc/source/contributor/: contributing.rst  index.rst
doc/source/reference/: index.rst  pythonclient.rst  pythonclient_v2.rst
doc/source/v2_reference/: index.rst  pythonclient_v2.rst
releasenotes/notes/: api-v2-features-650eb8cc0f50a729.yaml  autogenerated-api-docs-3bc8513e63bfe610.yaml  autogenerated-cli-docs-c1e89ec6ea66c4a9.yaml  cli-deprecation-da0e7b6dfe77af52.yaml  drop-py2-7-862abe2ec0c32c5f.yaml  event-logs-c6d286e25dc7d9b1.yaml  experimental-v2-support-67ccf699e056ed78.yaml  fields-unset-068db4c3e680c37d.yaml  fix-job-binary-download-py3-5592eca2345305bd.yaml  fix-osc-520-regression-a92dff38f04e6a57.yaml  implement-pagination-2ba52769d240a3ce.yaml  job-binary-create-optional-bc0f9ee6426c5659.yaml  job-create-optional-034307a6b5db2cf2.yaml  job-execution-create-optional-1014a403e5ffa7ac.yaml  job-job-template-apiv2-change-93ffbf2b1360cddc.yaml  multiple-clusters-change-69a15f00597739d7.yaml  new-cli-6119bf8a4fb24ab6.yaml  osc-apiv2-4079c8cdb839ae42.yaml  plugin-api-f650c26a030b7df8.yaml  remove-functional-tests-c4b9d43c2c32d121.yaml  remove-old-cli-commands-06b9936ce044dd0f.yaml  remove-py26-dad75fc8d602b3c5.yaml  remove-py33-8364cb4805391750.yaml  rename_version_to_plugin-version-20cfe17530446391.yaml  rework-auth-c3e13a68a935671e.yaml  shares-update-d6f7e28acd27aa7f.yaml  start-using-reno-1f3418c11785c9ab.yaml  tags-update-c794416bcc035cb8.yaml  update-image-optional-f83c5746d88507cd.yaml  volume-mount-prefix-b6ef396a357cddd0.yaml
releasenotes/source/: conf.py  index.rst
saharaclient/: __init__.py  _i18n.py  client.py  shell.py  version.py
saharaclient/api/: base.py  client.py  cluster_templates.py  clusters.py  data_sources.py  events.py  helpers.py  httpclient.py  images.py  job_binaries.py  job_binary_internals.py  job_executions.py  job_types.py  jobs.py  node_group_templates.py  plugins.py  shell.py
saharaclient/api/v2/: job_templates.py  jobs.py
saharaclient/nova/: auth_plugin.py  base.py  extension.py  utils.py
saharaclient/openstack/common/: _i18n.py  cliutils.py  gettextutils.py  importutils.py  strutils.py
saharaclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
saharaclient/osc/: plugin.py  utils.py
saharaclient/osc/v1/: cluster_templates.py  clusters.py  data_sources.py  images.py  job_binaries.py  job_templates.py  job_types.py  jobs.py  node_group_templates.py  plugins.py  utils.py
saharaclient/osc/v2/: cluster_templates.py  clusters.py  data_sources.py  images.py  job_binaries.py  job_templates.py  job_types.py  jobs.py  node_group_templates.py  plugins.py
saharaclient/tests/functional/: base.py  test_readonly_sahara.py
saharaclient/tests/functional/hooks/: post_test_hook.sh
saharaclient/tests/hacking/: checks.py  commit_message.py  import_checks.py
saharaclient/tests/integration/configs/: config.py  itest.conf.sample  itest.conf.sample-full
saharaclient/tests/integration/tests/: base.py  clidriver.py  cluster.py  edp.py  full_test_driver.py  test_hdp.py  test_vanilla.py  test_vanilla2.py  utils.py
saharaclient/tests/nova/: test_shell.py  utils.py
saharaclient/tests/unit/: base.py  test_base.py  test_cluster_templates.py  test_clusters.py  test_data_sources.py  test_hacking.py  test_httpclient.py  test_images.py  test_job_binaries.py  test_job_binary_internals.py  test_job_executions.py  test_job_types.py  test_jobs.py  test_manager.py  test_node_group_templates.py  test_plugins.py  test_resource.py
saharaclient/tests/unit/nova/: test_shell.py  utils.py
saharaclient/tests/unit/osc/: test_plugin.py
saharaclient/tests/unit/osc/v1/: fakes.py  test_cluster_templates.py  test_clusters.py  test_data_sources.py  test_images.py  test_job_binaries.py  test_job_templates.py  test_job_types.py  test_jobs.py  test_node_group_templates.py  test_plugins.py  test_utils.py
saharaclient/tests/unit/osc/v2/: test_cluster_templates.py  test_clusters.py  test_data_sources.py  test_images.py  test_job_binaries.py  test_job_templates.py  test_job_types.py  test_jobs.py  test_node_group_templates.py  test_plugins.py
savannaclient/: client.py  shell.py  version.py
savannaclient/api/: __init__.py  base.py  client.py  cluster_templates.py  clusters.py  data_sources.py  helpers.py  httpclient.py  images.py  job_binaries.py  job_binary_internals.py  job_executions.py  job_origins.py  jobs.py  node_group_templates.py  parameters.py  plugins.py  shell.py
savannaclient/nova/: auth_plugin.py  base.py  extension.py  utils.py
savannaclient/openstack/common/: cliutils.py  gettextutils.py  importutils.py  jsonutils.py  log.py  strutils.py  version.py
savannaclient/openstack/common/apiclient/: auth.py  base.py  client.py  fake_client.py
savannaclient/tests/: test_resource.py
savannaclient/tests/nova/: test_shell.py
tools/: install_venv.py
