[metadata]
name = python-saharaclient
summary = Client library for Sahara API
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/python-saharaclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    saharaclient

[entry_points]
console_scripts =
    sahara = saharaclient.shell:main

openstack.cli.extension =
    data_processing = saharaclient.osc.plugin

openstack.data_processing.v1 =
    dataprocessing_plugin_list = saharaclient.osc.v1.plugins:ListPlugins
    dataprocessing_plugin_show = saharaclient.osc.v1.plugins:ShowPlugin
    dataprocessing_plugin_configs_get = saharaclient.osc.v1.plugins:GetPluginConfigs

    dataprocessing_data_source_create = saharaclient.osc.v1.data_sources:CreateDataSource
    dataprocessing_data_source_list = saharaclient.osc.v1.data_sources:ListDataSources
    dataprocessing_data_source_show = saharaclient.osc.v1.data_sources:ShowDataSource
    dataprocessing_data_source_delete = saharaclient.osc.v1.data_sources:DeleteDataSource

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
