[metadata]
name = python-saharaclient
summary = Client library for Sahara API
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/python-saharaclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    saharaclient

[entry_points]
console_scripts =
    sahara = saharaclient.shell:main

openstack.cli.extension =
    data_processing = saharaclient.osc.plugin

openstack.data_processing.v1 =
    dataprocessing_plugin_list = saharaclient.osc.v1.plugins:ListPlugins
    dataprocessing_plugin_show = saharaclient.osc.v1.plugins:ShowPlugin
    dataprocessing_plugin_configs_get = saharaclient.osc.v1.plugins:GetPluginConfigs

    dataprocessing_data_source_create = saharaclient.osc.v1.data_sources:CreateDataSource
    dataprocessing_data_source_list = saharaclient.osc.v1.data_sources:ListDataSources
    dataprocessing_data_source_show = saharaclient.osc.v1.data_sources:ShowDataSource
    dataprocessing_data_source_delete = saharaclient.osc.v1.data_sources:DeleteDataSource
    dataprocessing_data_source_update = saharaclient.osc.v1.data_sources:UpdateDataSource

    dataprocessing_image_list = saharaclient.osc.v1.images:ListImages
    dataprocessing_image_show = saharaclient.osc.v1.images:ShowImage
    dataprocessing_image_register = saharaclient.osc.v1.images:RegisterImage
    dataprocessing_image_unregister = saharaclient.osc.v1.images:UnregisterImage
    dataprocessing_image_tags_add = saharaclient.osc.v1.images:AddImageTags
    dataprocessing_image_tags_remove = saharaclient.osc.v1.images:RemoveImageTags
    dataprocessing_image_tags_set = saharaclient.osc.v1.images:SetImageTags

    dataprocessing_node_group_template_create = saharaclient.osc.v1.node_group_templates:CreateNodeGroupTemplate
    dataprocessing_node_group_template_list = saharaclient.osc.v1.node_group_templates:ListNodeGroupTemplates
    dataprocessing_node_group_template_show = saharaclient.osc.v1.node_group_templates:ShowNodeGroupTemplate
    dataprocessing_node_group_template_update = saharaclient.osc.v1.node_group_templates:UpdateNodeGroupTemplate
    dataprocessing_node_group_template_delete = saharaclient.osc.v1.node_group_templates:DeleteNodeGroupTemplate

    dataprocessing_cluster_template_create = saharaclient.osc.v1.cluster_templates:CreateClusterTemplate
    dataprocessing_cluster_template_list = saharaclient.osc.v1.cluster_templates:ListClusterTemplates
    dataprocessing_cluster_template_show = saharaclient.osc.v1.cluster_templates:ShowClusterTemplate
    dataprocessing_cluster_template_update = saharaclient.osc.v1.cluster_templates:UpdateClusterTemplate
    dataprocessing_cluster_template_delete = saharaclient.osc.v1.cluster_templates:DeleteClusterTemplate

    dataprocessing_cluster_create = saharaclient.osc.v1.clusters:CreateCluster
    dataprocessing_cluster_list = saharaclient.osc.v1.clusters:ListClusters
    dataprocessing_cluster_show = saharaclient.osc.v1.clusters:ShowCluster
    dataprocessing_cluster_update = saharaclient.osc.v1.clusters:UpdateCluster
    dataprocessing_cluster_delete = saharaclient.osc.v1.clusters:DeleteCluster
    dataprocessing_cluster_scale = saharaclient.osc.v1.clusters:ScaleCluster
    dataprocessing_cluster_verification = saharaclient.osc.v1.clusters:VerificationUpdateCluster

    dataprocessing_job_template_create = saharaclient.osc.v1.job_templates:CreateJobTemplate
    dataprocessing_job_template_list = saharaclient.osc.v1.job_templates:ListJobTemplates
    dataprocessing_job_template_show = saharaclient.osc.v1.job_templates:ShowJobTemplate
    dataprocessing_job_template_update = saharaclient.osc.v1.job_templates:UpdateJobTemplate
    dataprocessing_job_template_delete = saharaclient.osc.v1.job_templates:DeleteJobTemplate

    dataprocessing_job_type_list = saharaclient.osc.v1.job_types:ListJobTypes
    dataprocessing_job_type_configs_get = saharaclient.osc.v1.job_types:GetJobTypeConfigs

    dataprocessing_job_execute = saharaclient.osc.v1.jobs:ExecuteJob
    dataprocessing_job_list = saharaclient.osc.v1.jobs:ListJobs
    dataprocessing_job_show = saharaclient.osc.v1.jobs:ShowJob
    dataprocessing_job_update = saharaclient.osc.v1.jobs:UpdateJob
    dataprocessing_job_delete = saharaclient.osc.v1.jobs:DeleteJob

    dataprocessing_job_binary_create = saharaclient.osc.v1.job_binaries:CreateJobBinary
    dataprocessing_job_binary_list = saharaclient.osc.v1.job_binaries:ListJobBinaries
    dataprocessing_job_binary_show = saharaclient.osc.v1.job_binaries:ShowJobBinary
    dataprocessing_job_binary_update = saharaclient.osc.v1.job_binaries:UpdateJobBinary
    dataprocessing_job_binary_delete = saharaclient.osc.v1.job_binaries:DeleteJobBinary
    dataprocessing_job_binary_download = saharaclient.osc.v1.job_binaries:DownloadJobBinary

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
